fix: text alignment

--- a/components/StrategyCharts/StrategyCharts.module.css
+++ b/components/StrategyCharts/StrategyCharts.module.css
@@ -1,4 +1,3 @@
 .header {
   color: var(--greentext);
-  text-align: center;
 }
